# icelandic-qa-finetune

./: .envexample  .gitignore  config.py  main.py  pyproject.t  pyproject.toml
datasets/: __init__.py  config.py  nqil.py  ruquad_labeling.py  ruquad_unstandardized.py  ruquad_unstandardized_1.py  utils.py
models/: __init__.py  convbert.py  icebert.py  utils.py
training/: __init__.py  metrics.py  train.py  val.py
training_datasets/: __init__.py  nqil.py  ruquad_labeling.py
validation/: __init__.py
