[tool.poetry]
name = "finetune-icelanic-bert"
version = "0.1.0"
description = "Repo to finetune QA models using available QA resoures in Icelandic"
authors = ["njall skarphedinsson <njallis@gmail.com>"]
readme = "README.md"
packages = [{include = "finetune_icelanic_bert"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.29.2"
tokenizers = "0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
